<resources>
    <string name="app_name">Saved by the button</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="save">Save</string>
    <string name="phone_no_07xxxxxxxx">Phone No: 07xxxxxxxx</string>
    <string name="refresh">Refresh </string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="disconnect">Disconnect</string>
</resources>